--- a/index.html
+++ b/index.html
@@ -45,23 +45,7 @@
       
       /* إخفاء شريط التمرير */
       ::-webkit-scrollbar { width: 0px; background: transparent; }
-    </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "@heroicons/react/": "https://esm.sh/@heroicons/react@^2.2.0/",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
-    "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
-    "xlsx": "https://esm.sh/xlsx@^0.18.5",
-    "html5-qrcode": "https://esm.sh/html5-qrcode@^2.3.8"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
+    </style><link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-gray-50 text-gray-900 select-none">
     <div id="root"></div>
